[project]
name = "txagent"
version = "0.1.0"
description = "Evaluation of AI predictions in real-world electronic health records."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alive-progress>=3.2.0",
    "altair>=5.5.0",
    "duckdb>=1.3.0",
    "formulaic>=1.1.1",
    "lifelines>=0.30.0",
    "matplotlib>=3.9.4",
    "np>=1.0.2",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.32",
    "tqdm>=4.67.1",
    "vega-datasets>=0.9.0",
]

[[tool.uv.index]]
url = ""
default = true

[tool.uv]
package = true
allow-insecure-host = ["jfrog.apps.ocpdmzp.wclalit.org.il"]

[project.scripts]
count_codes = "code.count_codes_interactive.main"
ae_prevalence = "code.ae_prevalence.ae_prevalence:main"
ae_population = "code.ae_prevalence.ae_population:main"
forest_plot = "code.ae_prevalence.forest_plot:main"
